# appstore

./: .gitignore  README.md  README.zh-CN.md  action.yml  requirements.txt
.github/workflows/: action-self-test.yml  action.yml
Qt-C++/: CMakeLists.txt
Qt-C++/packaging/: build_python_runtime.py  build_python_venv.py  com.uniontech.utpublisher.desktop  compile_python_bytecode.py  info.json.in
Qt-C++/packaging/python-wheelhouse/: README.md
Qt-C++/src/: BridgeClient.cpp  BridgeClient.h  MainWindow.cpp  MainWindow.h  backend_launcher.cpp  main.cpp
Qt-C++/src/core/: AppJson.cpp  AppJson.h
Qt-C++/src/ui/: AppTheme.cpp  AppTheme.h  LoginDialog.cpp  LoginDialog.h  MetadataPanel.cpp  MetadataPanel.h  QrLoginDialog.cpp  QrLoginDialog.h  ScreenshotPanel.cpp  ScreenshotPanel.h  SidebarWidget.cpp  SidebarWidget.h  TargetMatrixPanel.cpp  TargetMatrixPanel.h  WorkflowBar.cpp  WorkflowBar.h
appstore/: README.md  README.zh-CN.md  __init__.py  ai_capture_planner.py  ai_capture_review.py  ai_click_targets.py  appstore_client.py  browser_flow.py  browser_runtime.py  browser_session.py  browser_submission.py  capabilities.py  capture_steps.py  capture_workflow.py  chromium_mirrors.py  deb.py  desktop_entry.py  inspectors.py  linglong.py  manifest.py  mcp_job_runner.py  mcp_server.py  models.py  new_app_workbook.py  platform_policy.py  platforms.py  pyppeteer_runtime.py  requirements.txt  screenshot_semantics.py  screenshot_validation.py  session_state.py  submission.py  translation.py  update_payload.py  upload_batch.py
appstore/examples/: generate_template.py  template.xlsx  uos-ai-mcp.example.json
appstore/tests/: __init__.py  test_ai_capture_planner.py  test_ai_capture_review.py  test_ai_click_targets.py  test_browser_runtime.py  test_browser_session.py  test_browser_submission.py  test_capabilities.py  test_capture_steps.py  test_capture_workflow.py  test_chromium_mirrors.py  test_client.py  test_deb.py  test_desktop_entry.py  test_examples.py  test_linglong.py  test_manifest.py  test_mcp_server.py  test_native_file_dialog.py  test_new_app_workbook.py  test_ocr.py  test_package_meta.py  test_platform_policy.py  test_screenshot_semantics.py  test_screenshot_validation.py  test_submission.py  test_translation.py  test_ui_backend.py  test_upload_batch.py
debian/: README.store-layout  changelog  control  copyright  rules
docs/: desktop-user-guide.zh-CN.md
openGA/: __init__.py  ocr.py  ocr_runtime.py
scripts/: appstore-mcp  setup-ocr-venv
ui/: README.md  assets.py  backend.py  cpp_bridge.py  dialogs.py  main.py  native_file_dialog.py  package_meta.py  preferences.py  qt_compat.py  web_login.py  wechat_qr_backend.py  wechat_qr_login.py
